# Flusso

./: AGENTS.md  LICENSE  README.md  doc.md  pyproject.toml
examples/: README.md  fake_train.py  submit_toy_queue.sh  toy_job.py
flusso/: __init__.py  cli.py  config.py  gpu_probe.py  models.py  runner.py  scheduler.py  store.py
tests/: test_cli.py  test_gpu_probe.py  test_runner.py  test_scheduler.py  test_store.py
