[project]
name = "flusso"
version = "0.1.0"
description = "Single-node multi-GPU CLI scheduler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
flusso = "flusso.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
